--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "ejs": "^3.1.6",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "mongodb": "^4.5.0",
+    "mongoose": "^4.13.21",
+    "mongoose-currency": "^0.2.0",
     "morgan": "~1.9.0"
   }
 }
