--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^4.5.0",
     "mongoose": "^5.1.7",
     "mongoose-currency": "^0.2.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "nodemon": "^2.0.15"
   }
 }
