--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "debug": "~2.6.9",
     "ejs": "^3.1.6",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "mongodb": "^4.5.0",
     "mongoose": "^5.1.7",
     "mongoose-currency": "^0.2.0",
     "morgan": "~1.9.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "session-file-store": "^1.2.0"
   }
 }
