--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.3.0",
     "mongodb": "^4.5.0",
     "mongoose": "^5.1.7",
     "mongoose-currency": "^0.2.0",
     "morgan": "~1.9.0",
     "nodemon": "^2.0.15",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "session-file-store": "^1.2.0"
